Agregando archivo README.md y algunos cambios en la vistas y la clase Paciente

--- a/src/main/resources/templates/editar_paciente.html
+++ b/src/main/resources/templates/editar_paciente.html
@@ -4,30 +4,32 @@
     <div th:replace="fragments/head :: head"></div>
     <title>Editar paciente</title>
 </head>
-<body>
+<body class="bg-info p-2 text-dark bg-opacity-25 d-flex flex-column min-vh-100">
 <div th:replace="fragments/header :: header"></div>
-<div class="container">
+<div class="container mt-120">
     <h2>Editar paciente existente</h2>
     <form th:action="@{/pacientes/actualizar/{id}(id=${paciente.id})}" th:object="${paciente}" method="post">
-        <div class="form-group">
+        <div class="form-group mt-60">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" th:field="*{nombre}" class="form-control"/>
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
             <label for="apellido">Apellido:</label>
             <input type="text" id="apellido" th:field="*{apellido}" class="form-control"/>
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
             <label for="diagnostico">Diagnóstico:</label>
             <input type="text" id="diagnostico" th:field="*{diagnostico}" class="form-control"/>
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
             <label for="habitacion">Habitación:</label>
             <input type="text" id="habitacion" th:field="*{habitacion}" class="form-control"/>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Guardar</button>
+        <button type="submit" class="btn btn-primary mt-60">Guardar</button>
     </form>
 </div>
-<div th:replace="fragments/footer :: footer"></div>
+    <div class="mt-auto">
+        <th:block th:replace="fragments/footer :: footer"></th:block>
+    </div>
 </body>
 </html>
