--- a/src/main/resources/templates/registrar_paciente.html
+++ b/src/main/resources/templates/registrar_paciente.html
@@ -4,34 +4,36 @@
     <div th:replace="fragments/head :: head"></div>
     <title>Registrar Paciente</title>
 </head>
-<body>
-<div th:replace="fragments/header :: header"></div>
-<div class="container">
-    <h2>Registrar Nuevo Paciente</h2>
-    <form th:action="@{/guardar}" th:object="${paciente}" method="post">
-        <div class="form-group">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" th:field="*{nombre}" class="form-control"/>
+<body class="bg-info p-2 text-dark bg-opacity-25 d-flex flex-column min-vh-100">
+    <div th:replace="fragments/header :: header"></div>
+        <div class="container mt-120">
+            <h2>Registrar nuevo paciente</h2>
+            <form th:action="@{/guardar}" th:object="${paciente}" method="post">
+                <div class="form-group mt-3">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" th:field="*{nombre}" class="form-control"/>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="apellido">Apellido:</label>
+                    <input type="text" id="apellido" th:field="*{apellido}" class="form-control"/>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="diagnostico">Diagnóstico:</label>
+                    <input type="text" id="diagnostico" th:field="*{diagnostico}" class="form-control"/>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="fecha_ingreso">Fecha de Ingreso:</label>
+                    <input type="date" id="fecha_ingreso" th:field="*{fecha_ingreso}" class="form-control"/>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="habitacion">Habitación:</label>
+                    <input type="text" id="habitacion" th:field="*{habitacion}" class="form-control"/>
+                </div>
+                <button type="submit" class="btn btn-primary mt-60">Guardar</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="apellido">Apellido:</label>
-            <input type="text" id="apellido" th:field="*{apellido}" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label for="diagnostico">Diagnóstico:</label>
-            <input type="text" id="diagnostico" th:field="*{diagnostico}" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label for="fecha_ingreso">Fecha de Ingreso:</label>
-            <input type="date" id="fecha_ingreso" th:field="*{fecha_ingreso}" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label for="habitacion">Habitación:</label>
-            <input type="text" id="habitacion" th:field="*{habitacion}" class="form-control"/>
-        </div>
-        <button type="submit" class="btn btn-primary mt-3">Guardar</button>
-    </form>
-</div>
-<div th:replace="fragments/footer :: footer"></div>
+    <div class="mt-auto">
+        <th:block th:replace="fragments/footer :: footer"></th:block>
+    </div>
 </body>
 </html>
